# CPDFairness

./: .env  .gitignore  LICENSE  Readme.md  pyproject.toml
experiments/exp_1/: config.yaml
experiments/exp_2/: config.yaml
experiments/exp_3/: config.yaml
experiments/exp_4/: config.yaml
experiments/exp_5/: config.yaml
experiments/exp_6/: config.yaml
src/: main.py
src/data/: data_reader.py  dataset.py
src/experiment/: base_experiment.py  experiment.py  plot_experiment.py  quick_load_exp.py
src/likelihood/: activation_extractor.py  histograms.py  likelihood.py
src/model/: binary_classificator.py  classificator.py  trainer.py
src/preprocessing/: data_preparator.py  dataset.py  prepro_operations.py  preprocessing.py
src/utils/: config.py  env.py  file_reader.py  file_writer.py  logger.py
src/visualisation/: visualisation.py
tests/: test_activation_extractor.py  test_classificator.py  test_data_preparator.py  test_data_reader.py  test_dataset.py  test_env.py  test_experiment.py  test_file_reader.py  test_file_writer.py  test_histograms.py  test_likelihood.py  test_logger.py  test_prepro_operations.py  test_preprocessing.py  test_preprocessing_class.py  test_trainer.py  test_visualisation.py
