[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
dependencies = ["torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "imbalanced-learn>=0.12",
    "fairlearn>=0.8",
    "aif360>=0.6"]
authors = [{ name = "Benjamin Djian", email = "benjamin.djian3@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project]
name = "CPDFairness"
version = "0.2.0"
description = "Compute and analyse CPD distribution between demographic groups."

[project.urls]
Repository = "https://github.com/Benjamin-Djian/CPDFairness"
